--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Tutor Profil</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
 </head>
 <body>
+    <!-- Bootstrap modal for success/error message -->
+    
+
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="/tutor_profile">Tutoren Kabinett</a>
@@ -30,29 +36,55 @@
             </ul>
         </div>
     </nav>
-    <!-- Flash messages -->
-    {% with messages = get_flashed_messages(with_categories=true) %}
-    {% if messages %}
-        {% for category, message in messages %}
-            <div class="alert alert-{{ category }}">
-                {{ message }}
+    <!-- Bootstrap modal for success/error message -->
+    <div class="modal fade" id="passwordChangeModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Password Change Status</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div id="message"></div>
+                </div>
             </div>
-        {% endfor %}
-    {% endif %}
-    {% endwith %}
-    <!-- Passwort-Formular -->
-    <form action="/tutor/change_password" method="POST">
-        <label for="old_password">Altes Passwort:</label>
-        <input type="password" id="old_password" name="old_password" required><br><br>
-        
-        <label for="new_password">Neues Passwort:</label>
-        <input type="password" id="new_password" name="new_password" required><br><br>
-        
-        <label for="repeat_password">Passwort wiederholen:</label>
-        <input type="password" id="repeat_password" name="repeat_password" required><br><br>
-        
-        <button type="submit" class="btn btn-primary">Passwort ändern</button>
-    </form>
-    
+        </div>
+    </div> 
 
+    <!-- Password change status -->
+    <div id="password-change-status">
+        <!-- Display messages here -->
+    </div>
+    <!-- Passwort-Formular -->
+    <div class="container">
+        <form action="/tutor/change_password" method="POST">
+            <label for="old_password">Altes Passwort:</label>
+            <input type="password" id="old_password" name="old_password" required><br><br>
+            
+            <label for="new_password">Neues Passwort:</label>
+            <input type="password" id="new_password" name="new_password" required><br><br>
+            
+            <label for="repeat_password">Passwort wiederholen:</label>
+            <input type="password" id="repeat_password" name="repeat_password" required><br><br>
+            
+            <button type="submit" class="btn btn-primary">Passwort ändern</button>
+        </form>
+    </div>
+    <script>
+        $(document).ready(function() {
+            // Check if the response message is available
+            var responseMessage = '{{ response_data.message if response_data else "" }}';
+    
+            if (responseMessage) {
+                $('#message').text(responseMessage);
+    
+                // Show the Bootstrap modal
+                $('#passwordChangeModal').modal('show');
+            }
+        });
+    </script>
+    
 </body>
+</html>
