--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -60,7 +60,9 @@
     <div style="display: flex; margin-top: 20px;">
         <div style="margin-right: 20px;">
             <a href="/add_lesson" class="btn btn-success" style="margin-bottom: 10px;">Neue Lektion</a>
-            <a href="/admin/finances" class="btn btn-primary">Finanzen</a>
+            <a href="/admin/finances" class="btn btn-primary" style="margin-bottom: 10px;">Finanzen</a>
+
+            <a href="/admin/report_cards" class="btn btn-info">Berichte</a>
         </div>
         <div id='calendar'></div>
     </div>
