--- a/templates/tutor_dashboard.html
+++ b/templates/tutor_dashboard.html
@@ -3,6 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Tutor Panel</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
+    <!-- jQuery (required for Bootstrap's JavaScript) -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+
+    <!-- Popper.js (required for Bootstrap's JavaScript) -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+
+    <!-- Bootstrap JavaScript -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <!-- Add any additional CSS files here -->
     <style>
@@ -13,21 +25,25 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.css" />
 </head>
 <body>  
-    <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Tutor Panel</a>
+        <a class="navbar-brand" href="/tutor_profile">Tutoren Kabinett</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Modify Lesson</a>
+                    <a class="nav-link" href="/tutor/change_password">Passwort zurücksetzen</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Profile Settings</a>
+                    <a class="nav-link" href="/tutor/view_students">Schüler anzeigen</a>
                 </li>
-                <!-- Add more links as needed -->
+                <li class="nav-item active">
+                    <a class="nav-link" href="/tutor/lessons">Stunden-Übersicht</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/tutor/edit_tutor">Fächer anzeigen</a>
+                </li>
             </ul>
         </div>
     </nav>
