html stuff pls work

--- a/templates/add_student_to_F.html
+++ b/templates/add_student_to_F.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Familie bearbeiten</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
@@ -15,6 +16,7 @@
         <!-- Bootstrap JavaScript -->
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
+        <!-- Zusätzliche Styles können hier hinzugefügt werden -->
     </head>
 <body>
     <!-- Navigationsleiste -->
