--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -5,6 +5,18 @@
     <title>Admin Panel</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.css" />
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
+    <!-- jQuery (required for Bootstrap's JavaScript) -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+
+    <!-- Popper.js (required for Bootstrap's JavaScript) -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+
+    <!-- Bootstrap JavaScript -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
     <style>
         .container {
             max-width: 80%; /* or any other percentage or fixed width */
@@ -62,7 +74,7 @@
             <a href="/add_lesson" class="btn btn-success" style="margin-bottom: 10px;">Neue Lektion</a>
             <a href="/admin/finances" class="btn btn-primary" style="margin-bottom: 10px;">Finanzen</a>
 
-            <a href="/admin/report_cards" class="btn btn-info">Berichte</a>
+            <a href="/admin/report_cards" class="btn btn-info">Berichs</a>
         </div>
         <div id='calendar'></div>
     </div>
