small fix, mainly db side

--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -74,7 +74,7 @@
             <a href="/add_lesson" class="btn btn-success" style="margin-bottom: 10px;">Neue Lektion</a>
             <a href="/admin/finances" class="btn btn-primary" style="margin-bottom: 10px;">Finanzen</a>
 
-            <a href="/admin/report_cards" class="btn btn-info">Berichs</a>
+            <a href="/admin/report_cards" class="btn btn-info">Berichte</a>
         </div>
         <div id='calendar'></div>
     </div>
