--- a/templates/admin_report_cards.html
+++ b/templates/admin_report_cards.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Bercihte</title>
+    <title>Berichte</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <!-- Include DataTables -->
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.css">
@@ -49,7 +49,7 @@
     </nav>
 
     <div class="container">
-        <h2>Bercihte</h2>
+        <h2>Berichte</h2>
         <table class="table table-bordered" id="financesTable">
             <thead>
                 <tr>
